<resources>
    <!-- Titles -->
    <string name="app_name">Popular Movies</string>

    <!-- MainActivity options -->
    <string name="option_popular">Most Popular</string>
    <string name="option_top_rated">Top Rated</string>
    <string name="option_favorites">Favorites</string>

    <!-- MovieDetailActivity strings -->
    <string name="movie_title">Movie Title</string>
    <string name="release_date_label">Release Date</string>
    <string name="release_date">Release Date Value</string>
    <string name="user_rating_label">User Rating</string>
    <string name="user_rating">User Rating Value</string>
    <string name="plot_synopsis_label">Plot Synopsis</string>
    <string name="plot_synopsis">Plot Synopsis Value</string>
    <string name="poster_content_description">Movie Poster</string>
    <string name="backdrop_content_description">Movie Backdrop</string>
    <string name="error_message">Movie data is unavailable</string>
    <string name="no_favorites">No favorites selected</string>
    <string name="review_author">Author</string>
    <string name="review_content">Content</string>
    <string name="reivew_url">url</string>
    <string name="reviews_label">Reviews</string>
    <string name="no_reviews">No Reviews</string>
    <string name="trailers_label">Trailers</string>
    <string name="no_trailers">No Trailers</string>
    <string name="video_name">Name</string>
    <string name="video_link">Link</string>
    <string name="movie_icon">Movie Icon</string>

    <!-- Sharing a movie -->
    <string name="share">Share</string>

    <!-- Favoriting/Unfavoriting a movie -->
    <string name="favorites_button">Favorite/Unfavorite</string>

    <!-- for logs -->
    <string name="failed_to_load_favorites">Failed to asynchronously load favorites data</string>
</resources>
